--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test prisma db seed && dotenv -e .env.test jst --no-cache",
     "dev": "nodemon src/server.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +20,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
@@ -30,6 +34,7 @@
     "@types/jest": "^29.0.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/supertest": "^2.0.12",
+    "faker": "^6.6.6",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.3.1",
