feature:Implementa tests para a rota de login e cadastro.

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres:Lucas043560@localhost:5432/repoprovas_teste
+DATABASE_URL=postgresql://postgres:Lucas043560@localhost:5432/repoprovas_teste
